[package]
name = "network-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
strum_macros = "0.26.4"
ipnet = "2.10.1"
surge-ping = "0.8.1"
futures = "0.3.31"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
rand = "0.8.5"
dns-lookup = "2.0.4"
arp-toolkit = "0.3.2"
get_if_addrs = "0.5.3"
